Add implementation for users and for operators, add tests
