# microservice/models/operator.py
@@ -6,13 +6,16 @@ class Operator(AbstractUser):
     __tablename__ = "operator"
 
     id = db.Column(db.Integer, primary_key=True, autoincrement=True)
-    email = db.Column(db.Unicode(128), nullable=False)
     firstname = db.Column(db.Unicode(128))
     lastname = db.Column(db.Unicode(128))
     password_hash = db.Column(db.Unicode(128))
-    dateofbirth = db.Column(db.DateTime)
-    phone_number = db.Column(db.Unicode(40))
-    fiscal_code = db.Column(db.Unicode(128))
+    fiscalcode = db.Column(db.Unicode(128))
+    email = db.Column(db.Unicode(128), nullable=False)
+    phonenumber = db.Column(db.Unicode(40))
+    birthdate = db.Column(db.DateTime)
 
     def __init__(self, *args, **kw):
         super().__init__(*args, **kw)
+
+    def serialize(self, keys):
+        return dict([(k, v) for k, v in self.__dict__.items() if k in keys])
